[package]
name = "git-rust"
version = "0.1.0"
description = "A simple implementation of Git in Rust"
repository = "https://github.com/arjav0703/git-rust"
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"                                # compression
hex = "0.4.3"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
